getting close to a prettified override

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -18,6 +18,8 @@
 <script src="/plugins/DataTables-1.8.2/extras/TableTools/media/js/ZeroClipboard.js" charset="utf-8" type="text/javascript"></script>
 <script src="/plugins/DataTables-1.8.2/extras/TableTools/media/js/TableTools.js" charset="utf-8" type="text/javascript"></script>
 
+<script type="text/javascript" src="/plugins/dataTables.fnReloadAjax.js"></script>
+
 <script language="JavaScript">
 
   function set_primary_tab(tab_id) {
