--- a/templates/search/live-requests.tmpl
+++ b/templates/search/live-requests.tmpl
@@ -202,7 +202,7 @@ $('document').ready(function(){
 
       if ( i === -1 ) {
         $('img', this).attr( 'src', sImageUrl+"details_close.png" );
-	fnFormatBorrowingOverrides(oTable_borrowing, nTr);
+	fnFormatBorrowingOverrides(oTable_borrowing, nTr, anOpenBorrowing);
         anOpenBorrowing.push( nTr );
       }
       else {
@@ -217,7 +217,7 @@ $('document').ready(function(){
             anOpenBorrowing.splice( i, 1 );
 
    	    $(nTr).children('.overrides').children('img').attr( 'src', sImageUrl+"details_close.png" );
-            fnFormatBorrowingOverrides(oTable_borrowing, nTr);
+            fnFormatBorrowingOverrides(oTable_borrowing, nTr, anOpenBorrowin);
             anOpenBorrowing.push( nTr );
           } );
           
@@ -238,7 +238,7 @@ $('document').ready(function(){
    
       if ( i === -1 ) {
         $('img', this).attr( 'src', sImageUrl+"details_close.png" );
-	fnFormatLendingOverrides(oTable_lending, nTr);
+	fnFormatLendingOverrides(oTable_lending, nTr, anOpenLending);
         anOpenLending.push( nTr );
       }
       else {
@@ -253,7 +253,7 @@ $('document').ready(function(){
             anOpenLending.splice( i, 1 );
 
    	    $(nTr).children('.overrides').children('img').attr( 'src', sImageUrl+"details_close.png" );
-            fnFormatLendingOverrides(oTable_lending, nTr);
+            fnFormatLendingOverrides(oTable_lending, nTr, anOpenLending);
             anOpenLending.push( nTr );
           } );
           
