--- a/templates/info/documents.tmpl
+++ b/templates/info/documents.tmpl
@@ -40,11 +40,17 @@
   <tr>
     <td>
       <h3>Programs/Promotion</h3>
+      <br><a href="?rm=send_pdf&doc=ELMposter.pdf">eLM Poster 1</a>
+      <br><a href="?rm=send_pdf&doc=ELMposter2.pdf">eLM Poster 2</a>
+      <br>
+      <br><a href="?rm=send_pdf&doc=library_booklet_-_small.pdf">Library booklet</a>
+      <br>
       <br><a href="?rm=send_pdf&doc=WIRhandout.share.pdf">Writer in Residence - handout</a>
       <br><a href="?rm=send_pdf&doc=wirposter.pdf">Writer in Residence - poster</a>
       <br><a href="?rm=send_pdf&doc=Writer_in_Residence_Visit_Application.pdf">Writer in Residence - visit application</a>
       <br>
       <br><a href="?rm=send_pdf&doc=we_speak_your_language.pdf">We Speak Your Language - poster</a>
+      <br><a href="?rm=send_pdf&doc=We_Speak_ePOSTER.pdf">We Speak Your Language - poster 2</a>
       <br>Find out about libraries document in these languages:
       <br>
       <a href="?rm=send_pdf&doc=MultilingualAmharic.pdf">Amharic</a>
@@ -73,7 +79,7 @@
   <tr>
     <td>
       <h3>General Information</h3>
-      <br><a href="?rm=send_pdf&doc=Resource_Sharing.pdf">Resource Sharing - Mar 26 2009</a>
+      <br><a href="?rm=send_pdf&doc=Resource_Sharing_-_Revised_January_2012.pdf">Resource Sharing - Revised January 2012</a>
       <br><a href="?rm=send_pdf&doc=Manitoba_Public_Library_Statistics_2007_-_Statistique_sur_les_Bibliotheque_Publiques_du_Manitoba_2007.pdf">Manitoba Public Library Statistics 2007 - Statistique sur les Bibliotheque Publiques du Manitoba 2007.pdf</a>
       <br><a href="?rm=send_pdf&doc=techsoup-disaster-recovery-guide.pdf">The Resilient Organization: A Guide for Disaster Planning and Recovery</a> (TechSoup Global, version 2.0, August 18, 2009)
     </td>
