--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -53,7 +53,8 @@
 
 <DIV id="header">
   <div id="logo">
-    <div id="logo_title">MAPLIN-4</div>
+    <!--div id="logo_title">fILL (Maplin-4)</div-->
+    <img src="/img/fILL.png">
     <div id="logo_slogan">Manitoba Public Libraries ILL management system</div>
   </div>
   <div id="header_quick_access">
