fixed type preventing printElement from loading

--- a/templates/search/receiving.tmpl
+++ b/templates/search/receiving.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_borrow.tmpl">
 
-<script type="text/javascript" scr="/plugins/jquery.printElement.js"></script>
+<script type="text/javascript" src="/plugins/jquery.printElement.js"></script>
 <script type="text/javascript" src="/js/receiving.js"></script>
 
 
