--- a/templates/search/receiving.tmpl
+++ b/templates/search/receiving.tmpl
@@ -92,12 +92,15 @@ $('document').ready(function(){
     <div id="myDiv">
       <h3>Printing of Date-Due slips</h3>
       <p>Select your printing option:</p>
-      <div id="slipPrinting">
-      </div>
+      <div id="slipPrinting"></div>
+      <div id="multiCount"></div>
 
       <br/>
       <h3>Receiving</h3>
       <div id="mylistDiv"></div>
+    </div>
+
+    <div id="multiPrint">
     </div>
 
   </div>
