fixed logo on search screen

--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -52,7 +52,7 @@
 <!-- from header.tmpl -->
 <DIV id="header">
   <div id="logo">
-    <div id="logo_title">MAPLIN-4</div>
+    <img src="/img/fILL.png">
     <div id="logo_slogan">Manitoba Public Libraries ILL management system</div>
   </div>
 
@@ -69,6 +69,7 @@
       <li><TMPL_VAR NAME="username"> </li>
       <li><a href="?authen_logout=1">Log out</a></li>
     </ul>
+<!--    <p id="lid"><TMPL_VAR NAME="lid"></p> -->
   </div>
 </DIV>
 
