--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -2,7 +2,7 @@
 
 <div id="nav2">
   <ul>
-    <li><a href=/cgi-bin/maplin3.cgi?rm=environment_form>ENV display</a></li>
+    <li><a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a></li>
     <li><a href="?authen_logout=1">Log out</a></li>
   </ul>
 </div>
