starting to build the report manager

--- a/templates/submenu_info.tmpl
+++ b/templates/submenu_info.tmpl
@@ -15,6 +15,12 @@
       </a>
     </li>
 
+    <li id="menu_info_reports">
+      <a href=/cgi-bin/info.cgi?rm=info_reports_form>
+      Reports
+      </a>
+    </li>
+
     <li id="menu_info_feeds">
       <a href=/cgi-bin/info.cgi?rm=info_feeds_form>
       Feeds
