beginnings of report pickup folder

--- a/templates/submenu_info.tmpl
+++ b/templates/submenu_info.tmpl
@@ -17,7 +17,13 @@
 
     <li id="menu_info_reports">
       <a href=/cgi-bin/info.cgi?rm=info_reports_form>
-      Reports
+      Run reports
+      </a>
+    </li>
+
+    <li id="menu_info_report-folder">
+      <a href=/cgi-bin/info.cgi?rm=info_report-folder_form>
+      Report folder
       </a>
     </li>
 
