requestor can add a note to potential lenders

--- a/templates/search/make_request.tmpl
+++ b/templates/search/make_request.tmpl
@@ -36,6 +36,9 @@
       <p>Enter the barcode number of your patron: 
 	<input type="text" name="pbarcode" size="15" maxlength="15">
       </p>
+      <p>Enter any additional notes for the potential lenders: 
+	<input type="text" name="request_note" size="60" maxlength="80">
+      </p>
       <input type="hidden" name="request_id" value=<TMPL_VAR name="request_id">>
       <input type="hidden" name="rm" value="complete_the_request">
       <input type="submit" value="Complete the request">
