--- a/templates/search/pull_list.tmpl
+++ b/templates/search/pull_list.tmpl
@@ -60,6 +60,7 @@ $('document').ready(function() {
              { "mDataProp": "Title" },
              { "mDataProp": "Date/Time requested" },
              { "mDataProp": "Requested by" },
+             { "mDataProp": "Requestor note" },
              { "mDataProp": "Your barcode for the requesting library" }
         ]
   });
@@ -78,7 +79,7 @@ $('document').ready(function() {
     <h3>Pull list</h3>
     <table id="gradient-style">
       <thead>
-	<tr><th>Call #</th><th>Author</th><th>Title</th><th>Date/Time requested</th><th>Requested by</th><th>Your barcode for the requesting library</th></tr>
+	<tr><th>Call #</th><th>Author</th><th>Title</th><th>Date/Time requested</th><th>Requested by</th><th>Requestor note</th><th>Your barcode for the requesting library</th></tr>
       </thead>
       <tfoot><tr><td colspan="8">You can print this and take it to the stacks.</td></tr></tfoot>
       <tbody>
@@ -89,6 +90,7 @@ $('document').ready(function() {
 	  <td><TMPL_VAR NAME="title"></td>
 	  <td><TMPL_VAR NAME="ts"></td>
 	  <td title="<TMPL_VAR NAME="library">"><TMPL_VAR NAME="from"></td>
+	  <td><TMPL_VAR NAME="note"></td>
 	  <td>
 	    <TMPL_VAR NAME="barcode"><br/>
 	    <img src="data:image/png;base64,<TMPL_VAR NAME="barcode_image">"/>
