--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -98,6 +98,12 @@ $('document').ready(function(){
       <br/>
       <h3>2. Respond to requests</h3>
       <div id="mylistDiv"></div>
+
+      <br/>
+      <h3>(3. Canada Post Shipping Tool)</h3>
+      <div id="shippingtool">
+	<p>Clicking on this link will open the <a href="http://www.clatoolbox.ca/EOE_SCE_Prod/forms/" target="_blank">Canada Post Shipping Tool</a> in a new tab or window.</p>
+      </div>
     </div>
 
   </div>
