made the Canada Post link more prominent on the Respond page

--- a/htdocs/fILL.1.0.css
+++ b/htdocs/fILL.1.0.css
@@ -212,7 +212,6 @@ div.wait
   display: inline;
 }
 
-/*------------------------------------------------------*/
 /*-------------------------------------------------------*/
 
 #csstabs 
@@ -440,7 +439,13 @@ div.details {
 #stat {
     width: 250px;
 }
+/*------------------------------------------------------*/
 
+.innerLeft {
+    width: 50%;
+    float: left;
+}
+.clear { clear: both; }
 
 /*---------- sandbox -----------*/
 div#waitDiv
