--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -85,25 +85,31 @@ $('document').ready(function(){
     </div>
 
     <div id="myDiv">
-      <h3>1. Set a default due date</h3>
-      <div id="defaultDueDate">
-	<form id="set_default_due_date" onsubmit="set_default_due_date(this); this.submit_default_due_date.value='Change default'; return false;">
-	  <p>
-	    Date (yyyy-mm-dd): <input id="datepicker" type="text">
-	    <input type="submit" name="submit_default_due_date" value="Set as default"/>
-	  </p>
-	</form>
+      <div class="innerLeft">
+	<h3>1. Set a default due date</h3>
+	<div id="defaultDueDate">
+	  <form id="set_default_due_date" onsubmit="set_default_due_date(this); this.submit_default_due_date.value='Change default'; return false;">
+	    <p>
+	      Date (yyyy-mm-dd): <input id="datepicker" type="text">
+	      <input type="submit" name="submit_default_due_date" value="Set as default"/>
+	    </p>
+	  </form>
+	</div>
       </div>
+
+      <div class="innerLeft">
+	<h3>(3. Canada Post Shipping Tool)</h3>
+	<div id="shippingtool">
+	  <p>Clicking on this link will open the <a href="http://www.clatoolbox.ca/EOE_SCE_Prod/forms/" target="_blank" style="text-decoration : underline;">Canada Post Shipping Tool</a> in a new tab or window.</p>
+	</div>
+      </div>
+
+      <div class="clear">
 
       <br/>
       <h3>2. Respond to requests</h3>
       <div id="mylistDiv"></div>
 
-      <br/>
-      <h3>(3. Canada Post Shipping Tool)</h3>
-      <div id="shippingtool">
-	<p>Clicking on this link will open the <a href="http://www.clatoolbox.ca/EOE_SCE_Prod/forms/" target="_blank">Canada Post Shipping Tool</a> in a new tab or window.</p>
-      </div>
     </div>
 
   </div>
