--- a/templates/submenu_lend.tmpl
+++ b/templates/submenu_lend.tmpl
@@ -15,6 +15,12 @@
       </a>
     </li>
 
+    <li id="menu_lend_shipping">
+      <a href=/cgi-bin/lightning.cgi?rm=shipping>
+      Shipping
+      </a>
+    </li>
+
     <li id="menu_lend_renewal_requests">
       <a href=/cgi-bin/lightning.cgi?rm=renew_answer>
       Renewal requests
