add mailing address to shipping

--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -43,7 +43,7 @@ $('document').ready(function(){
                            { "mDataProp": "Call #" },
                            { "mDataProp": "Author" },
                            { "mDataProp": "Title" },
-                           { "mDataProp": "Note" },
+                           { "mDataProp": "Mailing address" },
                            { "mDataProp": "Timestamp" },
                            { "mDataProp": "Due date" },
                            { "mDataProp": "Response" }
