add column indicating whether borrower has canada post account to the Respond page

--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -45,7 +45,7 @@ $('document').ready(function(){
                            { "mDataProp": "Title" },
                            { "mDataProp": "Note" },
                            { "mDataProp": "Timestamp" },
-                           { "mDataProp": "Due date" },
+                           { "mDataProp": "Has CP account?" },
                            { "mDataProp": "Response" }
                       ]
 
