update search help

--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -38,7 +38,7 @@
 
 <script type="text/javascript">
   function searchHelp(e) {
-    alert("Search help\n\nfILL does a general keyword search by default.\n\nAdvanced searching\n\nSpecific title:  \tti=\"The case for mars\"\nSpecific author:\tau=\"Zubrin, Robert\"\nSpecific subject:\tsu=\"mars planet\"\n\nNote that specific searches match exactly against each library's\ncatalogue record; keyword searches are a lot more forgiving!");
+    alert("Search help\n\nfILL does a general keyword search by default.\n\nAdvanced searching\n\nSpecific title:  \tti=\"The case for mars\"\nSpecific author:\tau=\"Zubrin, Robert\"\nSpecific subject:\tsu=\"mars planet\"\n\nYou can combine these using the connectors AND, OR, NOT:\n\n\tau=\"david drake\" and au=\"eric flint\"\n\n\tti=\"cooking\" and su=\"solar\"\n\n\tti=\"cooking\" not su=\"microwave\"");
   }
 </script>
 
