--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -62,6 +62,7 @@
       <li><TMPL_VAR NAME="username"> </li>
       <li><a href="?authen_logout=1">Log out</a></li>
     </ul>
+    <p id="library_name"><TMPL_VAR NAME="library"></p>
     <p id="lid"><TMPL_VAR NAME="lid"></p>
   </div>
 </DIV>
