added user guide

--- a/templates/info/documents.tmpl
+++ b/templates/info/documents.tmpl
@@ -13,9 +13,9 @@
 <table border="1">
   <tr>
     <td>
-      <h3>Maplin</h3>  
-      <br><a href="?rm=send_pdf&doc=Librarian_Guide.pdf">Librarian's Guide to Maplin</a>
-      <br><a href="?rm=send_pdf&doc=Patron_Guide.pdf">Patron's Guide to Maplin (3-fold)</a>
+      <h3>fILL Interlibrary Loan Management</h3>  
+      <br><a href="?rm=send_pdf&doc=fILL_-_User_Guide.pdf">fILL User's Guide</a>
+      <br><a href="?rm=send_pdf&doc=fILL_brochure.pdf">Manitoba Libraries Conference 2012 fILL brochure (3-fold)</a>
       <br>
     </td>
   </tr>
