added instructions on getting the user guide to the welcome page

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -1,23 +1,33 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 
+<table>
+  <tr>
+    <td style="width:15%"></td>
+    <td style="width:70%">
+      <h1>Welcome!</h1>
+      <br />
+      <p>This is the Manitoba public libraries' Z39.50 spray search and interlibrary-loan requesting system.</p>
+      <br />
+      <h3>fILL User's Guide</h3>
+      <br />
+      <p>The fILL User's Guide can be found under the "Info" tab, in the "Documents" subtab.</p>
+      <br />
+      <h3>Links to Counting Opinions</h3>
+      <ul>
+	<li><a href="http://mb.countingopinions.com/index.php?page_id=4">Statistics/Ready Reports</a></li>
+	<li><a href="http://mb.countingopinions.com/memberlist_details.php?l=14702">Addresses, phone numbers, and links to library web sites</a></li>
+	<li><a href="http://mb.countingopinions.com/locations.php?l=14702">Map of Manitoba Public Libraries</a></li>
+      </ul>
+      <br />
+      <p><a href="http://elm.lib.overdrive.com/">eLibraries Manitoba</a> monthly statistics can be found at the bottom of the <a href="http://mb.countingopinions.com/index.php?page_id=4">Counting Opinions Ready Reports</a> page.</p>
+      <br />
+      <br />
+      <p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
+      <p class="debuginfo">Session id [<TMPL_VAR NAME="sessionid">]</p>
 
-<h1>Welcome!</h1>
-<br />
-<p>This is the Manitoba public libraries' Z39.50 spray search and interlibrary-loan requesting system.</p>
-<br />
-<p>
-<br />
-<h3>Links to Counting Opinions</h3>
-<ul>
-  <li><a href="http://mb.countingopinions.com/index.php?page_id=4">Statistics/Ready Reports</a></li>
-  <li><a href="http://mb.countingopinions.com/memberlist_details.php?l=14702">Addresses, phone numbers, and links to library web sites</a></li>
-  <li><a href="http://mb.countingopinions.com/locations.php?l=14702">Map of Manitoba Public Libraries</a></li>
-</ul>
-<br />
-<p><a href="http://elm.lib.overdrive.com/">eLibraries Manitoba</a> monthly statistics can be found at the bottom of the <a href="http://mb.countingopinions.com/index.php?page_id=4">Counting Opinions Ready Reports</a> page.
-<br />
-<br />
-<p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
-<p class="debuginfo">Session id [<TMPL_VAR NAME="sessionid">]</p>
+    </td>
+    <td style="width:15%"></td>
+  </tr>
+</table>
 
 <TMPL_INCLUDE NAME="footer.tmpl">
