--- a/templates/search/renew-answer.tmpl
+++ b/templates/search/renew-answer.tmpl
@@ -88,7 +88,7 @@ $('document').ready(function(){
     <div id="myDiv">
       <h3>1. Set a default due date</h3>
       <div id="defaultDueDate">
-	<form id="set_default_due_date" onsubmit="set_default_due_date(this); this.submit_default_due_date.value='Change default'; return false;">
+	<form id="set_default_due_date" onsubmit="set_default_due_date(this); this.submit_default_due_date.value='Change due date'; return false;">
 <!--
 	  Year: <input type="text" size="4" maxlength="4" name="year" value="2011">
 	  Month: <input type="text" size="2" maxlength="2" name="month" value="11">
@@ -96,7 +96,7 @@ $('document').ready(function(){
 -->
 	  <p>
 	    Date (yyyy-mm-dd): <input id="datepicker" type="text">
-	    <input type="submit" name="submit_default_due_date" value="Set as default"/>
+	    <input type="submit" name="submit_default_due_date" value="Apply due date"/>
 	  </p>
 	</form>
       </div>
